<resources>
    <string name="app_name">StudiCaseLogin</string>
    <string name="txt_login">Login</string>
    <string name="txt_email">Email</string>
    <string name="txt_password">Password</string>
    <string name="str_about">About</string>
    <string name="str_lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</string>
    <string name="str_platform">Platform</string>
    <string name="str_metascore">Metascore</string>
    <string name="str_genre">Genre</string>
    <string name="str_developer">Developer</string>
    <string name="str_releasedate">Release Date</string>
</resources>